# Secret-coding-final-project

./: CMakeLists.txt  README.md  run_app
.ipynb_checkpoints/: CMakeLists-checkpoint.txt
app/: main.cpp
app/.ipynb_checkpoints/: main-checkpoint.cpp
code/: ModInt.cpp  ModInt.h  Polynomial.cpp  Polynomial.h  SSS.cpp  SSS.h  Scenarios.cpp  Scenarios.h  Shamir.cpp  Shamir.h  Share.h  Utils.cpp  Utils.h
code/.ipynb_checkpoints/: ModInt-checkpoint.cpp  ModInt-checkpoint.h  Polynomial-checkpoint.cpp  Polynomial-checkpoint.h  SSS-checkpoint.cpp  SSS-checkpoint.h  Shamir-checkpoint.cpp  Share-checkpoint.cpp  ShareStore-checkpoint.h  Utils-checkpoint.cpp  Utils-checkpoint.h
tests/: test_hw.cpp
